--- a/wp-content/themes/custom/scss/site/_general.scss
+++ b/wp-content/themes/custom/scss/site/_general.scss
@@ -143,6 +143,10 @@ input{
 	background: $orangea;
 }
 
+.bg-tan{
+	background: $tan;
+}
+
 .brand-secondary{
 	color: $light-blue;
 }
@@ -207,14 +211,14 @@ input{
 
 $text-button: (
 	xs: (9px, 12px),
-	sm: (11px, 12px),
-	md: (12px, 12px),
-	lg: (13px, 12px),
-	xl: (14px, 12px)
+	sm: (10px, 12px),
+	md: (11px, 12px),
+	lg: (12px, 12px),
+	xl: (13px, 12px)
 	);
 
 .button{
-	padding: 12px 18px 10px 18px;
+	padding: 16px 25px 14px 25px;
 	color: white;
 	@extend .font-black;
 	@extend .uppercase;	
@@ -223,8 +227,9 @@ $text-button: (
 	text-align: center;
 	@include text-size($text-button);	
 	background-size: 100% 100%;
-	background: $brand;
+	background: $interactive;
 	border-radius: 8px;
+	transform: scale(1);
 	transition: transform .1s;
 
 	@media screen and (max-width: $md) {
@@ -252,13 +257,17 @@ $text-button: (
 		@include text-size($text-button-large);	
 	}
 
-	&.button-interactive{
-		background: $interactive;
+	&.button-brand{
+		background: $brand;
 	}
 
 	&.button-pink{
 		background: $pink;
 		color: $brand;
+
+		&:hover{
+			color: $brand;
+		}
 	}
 
 	&.button-centered{
@@ -275,7 +284,7 @@ $text-button: (
 	&:hover{
 		transition: transform .1s;
 		transform: scale(1.05);
-		transform-origin: 0 0;
+		//transform-origin: 0 0;
 		color: white;
 	}
 
@@ -290,7 +299,7 @@ $text-button: (
 }
 
 .shadowed{
-	box-shadow: 0px 1px 5px transparentize($dark, .7);
+	box-shadow: 1px 2px 8px transparentize($dark, .3);
 }
 
 
@@ -327,6 +336,7 @@ $text-button: (
 	.card-inner-link{
 		display: flex;
 		width: 100%;
+		height: 100%;
 	}
 	
 	.card-inner{
@@ -349,9 +359,10 @@ $text-button: (
 	}
 
 	.card-title{
-		@extend .bold;
+		//@extend .bold;
+		@extend .font-black;
 		@extend .brand;
-		padding: 15px 30px 0px 30px;
+		padding: 30px 30px 0px 30px;
 
 		@media screen and (max-width: $xl) {
 			padding: 15px 15px 0 15px;
@@ -363,12 +374,12 @@ $text-button: (
 	}
 
 	.card-description{
-		@extend .medium-dark;
+		@extend .dark;
 		@extend .small;
 		width: 100%;
 		margin-bottom: 0;
 		flex: 1 0 auto;
-		padding: 0px 30px 30px 30px;
+		padding: 0px 30px 50px 30px;
 
 		@media screen and (max-width: $xl) {
 			padding: 0px 15px 7px 15px;
@@ -452,7 +463,7 @@ $text-button: (
 			border: none;
 			height: 100%;
 			position: relative;
-			padding: 100px 40px 50px 40px;
+			padding: 120px 40px 70px 40px;
 			display: flex;
 			@extend .align-items-end;
 
@@ -466,7 +477,7 @@ $text-button: (
 
 		.card-title{
 			padding: 0;
-			margin-bottom: 30px;
+			margin-bottom: 50px;
 			@extend .font-black;
 		}
 
@@ -642,7 +653,12 @@ $text-button: (
 				width: 14px;
 				height: 14px;
 				border: none;
-				background: $brand;	
+				background: $brand;
+
+				@media screen and (max-width: $sm) {
+						width: 10px;
+						height: 10px;
+					}	
 			}
 
 		}
@@ -652,6 +668,11 @@ $text-button: (
 			height: 14px;
 			background: #ccc;
 			border: none;
+
+			@media screen and (max-width: $sm) {
+				width: 10px;
+				height: 10px;
+			}
 		}
 	}
 }
