--- a/wp-content/themes/custom/scss/site/_home.scss
+++ b/wp-content/themes/custom/scss/site/_home.scss
@@ -1,14 +1,31 @@
 
+.home-section-heading{
+	@extend .h4;
+	@extend .uppercase;
+	@extend .font-black;
+	@extend .tracked-less;
+}
+
+.container-fluid-home{
+	max-width: 1400px;
+}
+
 #home-hero{
+	overflow: hidden;
+
+	.home-hero-row{
+		width: 100%;
+	}
+
 	.block-background{
 		&:after{
-			background: transparentize($dark, .8);
+			background: transparentize($brand, .75);
 		}
 	}
 
 	video{
 		min-height: 100%;
-		min-width: 100%;
+		min-width: 102%;
 		width: auto;
 		height: auto;
 		max-width: none;
@@ -16,24 +33,8 @@
 		position: absolute;
 		top: 50%;
 		left: 50%;
-		transform: translate(-50%,-50%);
+		transform: translate(-51%,-50%);
 	}
-
-
-	// &:after{
-	// 	position: absolute;
-	// 	content: '';
-	// 	display: block;
-	// 	width: 100%;
-	// 	height: 100%;
-	// 	bottom: 0;
-	// 	right: 0;
-	// 	background-image: url('../images/home-drop.png');
-	// 	background-size: cover;
-	// 	background-position: bottom right;
-	// 	opacity: .3;
-	// 	z-index: 0;
-	// }
 
 	.container-fluid{
 		position: relative;
@@ -50,6 +51,14 @@
 		//opacity: .9;
 		font-size: 60px;
 		line-height: 1.1;
+
+		@media screen and (max-width: $md) {
+			font-size: 40px;
+		}
+
+		@media screen and (max-width: $sm) {
+			font-size: 40px;
+		}
 	}
 
 	.background-links{
@@ -59,60 +68,63 @@
 	.background-link{
 		display: inline-block;
 		margin-right: 2em;
+	}
+}
 
-		.button{
-			//box-shadow: 2px 2px 15px 1px transparentize($dark, .2);
+
+#home-overview{
+	background: #E1F0F5;
+
+	.home-overview-block{
+		img{
+			width: 50px;
+			margin-bottom: 30px;
+			display: block;
+		}
+		.home-overview-link-container{
+			//display: flex;
+			//@extend .justify-content-center;
+			margin-bottom: 30px;
+		}
+		.home-overview-block-text{
+			//text-align: center;
+			max-width: 250px;
 		}
 	}
 }
 
-.take-action-card{
-	//height: 50vh;
-	@extend .align-items-end;
 
-	&:nth-child(2){
-		.card-title{
+
+#home-who-we-are{
+
+	.who-we-are-background-image{
+		@extend .background;
+		bottom: 0;
+		left: 0;
+		top: auto;
+	}
+	.block-text{
+		width: 100%;
+	}
+
+	.who-we-are-image{
+		border-radius: 8px;
+	}
+
+	.who-we-are-text-1,.who-we-are-text-2,.link-container{
+		margin-bottom: 60px;
+	}
+
+	.who-we-are-text-1,.who-we-are-text-2{
+		*{
 			color: white;
 		}
-
-		.button{
-			background: $pink;
-			color: $brand;
-		}
-	}
-
-	.card-inner{
-		
 	}
 }
 
-
-.home-hero-row{
-	width: 100%;
-}
-
-
-#home-mission{
-	overflow: hidden;
-	// &:after{
-	// 	position: absolute;
-	// 	content: '';
-	// 	display: block;
-	// 	width: 100%;
-	// 	height: 100%;
-	// 	bottom: 0;
-	// 	right: 0;
-	// 	background-image: url('../images/fish-strip.png');
-	// 	background-size: cover;
-	// 	//background-size: 100% 80%;
-	// 	background-repeat: no-repeat;
-	// 	background-position: left bottom;
-	// 	opacity: .1;
-	// 	z-index: 0;
-	// }	
-
-	#home-mission-image{
-
+#home-stories{
+	.block-background{
+		background-position: center center;
 	}
 }
 
@@ -120,9 +132,65 @@
 #home-supporters{
 
 	.slick-home-supporters{
-		
+		//border: 1px solid $brand;
+		margin-bottom: 60px;
+
+		.slick-arrow{
+			left: -50px;
+
+			@media screen and (max-width: $sm) {
+				left: -10px;
+			}
+			
+			&:after{
+				color: $brand;
+			}
+
+			&.slick-next{
+				left: auto;
+				right: -50px;
+
+				@media screen and (max-width: $sm) {
+					right: -15px;
+				}
+			}
+		}
+
+
+		.home-supporters-slide{
+			//border: 1px solid red;
+			padding: 1em 3vw;
+		}
+		img{
+			display: block;
+			margin: 0 auto;
+		}
 	}
-	.partner{
-		border: 1px solid red;
+}
+
+
+
+.take-action-card{
+
+	&.card-style-image-brand{
+		.card-title{
+			color: white;
+		}
+
+		.button{
+			background: $interactive;
+		}
 	}
+
+	&.card-style-image-interactive{
+		.card-title{
+			color: white;
+		}
+
+		.button{
+			background: darken($pink,5%);
+		}
+	}
+
+
 }
