first draft of search

--- a/wp-content/themes/custom/scss/site/_home.scss
+++ b/wp-content/themes/custom/scss/site/_home.scss
@@ -1,4 +1,9 @@
 
+.in-viewport{
+	border: 10px solid yellow;
+	transition: border 3s;
+}
+
 .home-section-heading{
 	@extend .uppercase;
 	@extend .font-black;
