--- a/wp-content/themes/custom/scss/utilities/_sizing.scss
+++ b/wp-content/themes/custom/scss/utilities/_sizing.scss
@@ -4,6 +4,7 @@
 @for $i from 1 through 20 {
 	.vh#{$i*5}{ 
 		height: 5vh * $i;
+		height: calc(var(--vh, (5vh * #{$i})) * 100);
 	}
 }
 
@@ -16,20 +17,24 @@
 @for $i from 1 through 20 {
 	.vhmin#{$i*5}{ 
 		min-height: 5vh * $i;
+		min-height: calc(var(--vh, (5vh * #{$i})) * 100);
 	}
 }
 
 @for $i from 1 through 20 {
 	.vhmax#{$i*5}{ 
 		max-height: 5vh * $i;
+		max-height: calc(var(--vh, (5vh * #{$i})) * 100);
 	}
 }
 
 .vhfull{
 	height: calc(100vh - #{$nav-height});
+	height: calc((var(--vh, 1vh) * 100) - #{$nav-height} );
 
 	@media screen and (max-width: $sm) {
 		height: calc(100vh - #{$nav-height-mobile});
+		height: calc((var(--vh, 1vh) * 100) - #{$nav-height-mobile} );
 	}
 
 }
