--- a/wp-content/themes/custom/scss/utilities/_modals.scss
+++ b/wp-content/themes/custom/scss/utilities/_modals.scss
@@ -2,25 +2,25 @@
 
 .modal{
 	position: fixed;
-	width: 100%;
-	height: 100%;
+	//width: 100%;
+	//height: 100%;
 	top: 0;
 	left: -100vw;
-	z-index: 11;
+	z-index: 12;
 	opacity: .5;
 	transition:  opacity $modal-transition ease-in-out, left 0s linear $modal-transition;
 	background: $brand;
 	border-radius: 8px;
 
 	width: calc(100% - 100px);
-	height: calc(100vh - #{$nav-height} - 40px);
-	top: calc(#{$nav-height} + 20px);
+	height: calc(100vh - ( #{$nav-height} * 2 ) - 10px);
+	top: calc( ((100vh - (100vh - ( #{$nav-height} * 2 ) - 10px) - #{$nav-height} ) / 2 ) + #{$nav-height});
 	box-shadow: 2px 4px 10px transparentize($dark, .5);
 
 	@media screen and (max-width: $md) {
 		width: calc(100% - 40px);
-		height: calc(100vh - #{$nav-height-mobile} - 100px);
-		top: calc(#{$nav-height-mobile} + 20px);
+		height: calc(100vh - #{$nav-height-mobile} - 120px);
+		top: calc(#{$nav-height-mobile} + 60px);
 	}
 
 	&.on{
@@ -42,11 +42,12 @@
 
 #modal-close{
 	position: fixed;
-	top: calc(#{$nav-height} + 30px);
+	//top: calc(#{$nav-height} + 30px);
+	top: calc( (((100vh - (100vh - ( #{$nav-height} * 2 ) - 10px) - #{$nav-height} ) / 2 ) + #{$nav-height}) - 45px);
 	right: -100px;
 	height: 40px;
 	width: 40px;
-	z-index: 12;
+	z-index: 13;
 	text-align: center;
 	opacity: 0;
 	transition: opacity $modal-transition, right 0s linear $modal-transition;
@@ -55,10 +56,14 @@
 		font-size: 50px;
 		line-height: 42px;
 		color: white;
+
+		@media screen and (max-width: $sm) {
+			font-size: 45px;
+		}
 	}
 
 	@media screen and (max-width: $md) {
-		top: calc(#{$nav-height-mobile} + 30px);
+		top: calc(#{$nav-height-mobile} + 15px);
 	}
 }
 
@@ -68,11 +73,11 @@
 	left: 0;
 	width: 100%;
 	height: 100%;
-	z-index: 8;
+	z-index: 11;
 	left: 200%;
 	@include transition(opacity .1s);
 	opacity: 0;
-	background: transparentize($ultra-light, .4);
+	background: transparentize($brand, .5);
 }
 
 //body styles
