finished gravity forms ajax loading

--- a/wp-content/themes/custom/scss/main.scss
+++ b/wp-content/themes/custom/scss/main.scss
@@ -1,5 +1,5 @@
 
-@import "bourbon";
+//@import "bourbon";
 @import "bootstrap/bootstrap";
 @import "slick.scss";
 @import "../fonts/fonts.css";
@@ -7,7 +7,7 @@
 //definitions
 @import "definitions/variables";
 @import "definitions/type-sizes";
-@import "definitions/mixins";
+//@import "definitions/mixins";
 
 //utilities
 @import "utilities/reset";
@@ -21,8 +21,8 @@
 @import "utilities/jquery-accordian";
 @import "utilities/accordion";
 @import "utilities/flexible-content";
-@import "utilities/progressive-images";
-@import "utilities/map-style";
+//@import "utilities/progressive-images";
+//@import "utilities/map-style";
 
 //site components
 @import "site/typography";
