--- a/wp-content/themes/custom/scss/site/_news.scss
+++ b/wp-content/themes/custom/scss/site/_news.scss
@@ -68,3 +68,21 @@
 		border-radius: 8px;
 	}
 }
+
+
+
+/* news single */
+
+.single-post{
+
+	#news-post-metadata{
+		padding-top: 30px;
+		padding-bottom: 20px;
+		background: white;
+		background: $ultra-light;
+	}
+}
+
+
+
+
