--- a/wp-content/themes/custom/scss/bootstrap/bootstrap.scss
+++ b/wp-content/themes/custom/scss/bootstrap/bootstrap.scss
@@ -9,17 +9,17 @@
 @import "variables";
 @import "mixins";
 @import "root";
-@import "reboot";
+//@import "reboot";
 @import "type";
-@import "images";
-@import "code";
+//@import "images";
+//@import "code";
 @import "grid";
 @import "tables";
 //@import "forms";
-@import "buttons";
-@import "transitions";
-@import "dropdown";
-@import "button-group";
+//@import "buttons";
+//@import "transitions";
+//@import "dropdown";
+//@import "button-group";
 //@import "input-group";
 //@import "custom-forms";
 // @import "nav";
@@ -29,14 +29,14 @@
 // @import "pagination";
 // @import "badge";
 // @import "jumbotron";
-@import "alert";
+//@import "alert";
 // @import "progress";
 // @import "media";
 // @import "list-group";
 // @import "close";
 // @import "modal";
 // @import "tooltip";
-@import "popover";
+//@import "popover";
 // @import "carousel";
 @import "utilities";
 // @import "print";
