--- a/wp-content/themes/custom/scss/site/_general.scss
+++ b/wp-content/themes/custom/scss/site/_general.scss
@@ -398,6 +398,7 @@ $text-button-small: (
 		}
 		@media screen and (max-width: $md) {
 			padding: 0px 10px 10px 10px;
+			font-size: 11px;
 		}
 	}
 
@@ -709,6 +710,8 @@ $text-button-small: (
 
 
 .slick-dots{
+	width: 100%;
+	text-align: center;
 
 	li{
 		margin-right: 13px;
