--- a/wp-content/themes/custom/scss/site/_my-account.scss
+++ b/wp-content/themes/custom/scss/site/_my-account.scss
@@ -145,6 +145,7 @@
 			//login form
 			.ur-frontend-form.login{
 				width: 360px;
+				margin: 0 auto;
 
 				*{
 					font-weight: 500;
@@ -163,6 +164,10 @@
 
 				.form-row{
 					//margin-bottom: 25px;
+				}
+
+				[type="submit"]{
+					margin-top: 40px;
 				}
 
 				.user-registration-form__label-for-checkbox.inline{
@@ -302,5 +307,26 @@
 
 
 
+}
+
+
+
+/* event editing */
+
+#event-manager-event-dashboard{
+	.wpem-main{
+		@media screen and (max-width: $xs) {
+			td{
+				padding-left: 40% !important;
+				&:before{
+					font-size: 14px;
+					top: 10px;
+				}
+				font-size: 13px;
+				line-height: 1.5;
+				padding: 7px;
+			}
+		}
+	}
 }
 
