--- a/wp-content/themes/custom/scss/utilities/_flexible-content.scss
+++ b/wp-content/themes/custom/scss/utilities/_flexible-content.scss
@@ -4,6 +4,10 @@ $fc-padding: $fc-padding-value 0 $fc-padding-value 0;
 .fc{
 	padding: $fc-padding;
 
+	@media screen and (max-width: $xs) {
+		padding: 8vh 0 8vh 0;
+	}
+
 	p{
 		line-height: 1.65;
 		margin-bottom: 2em;
