--- a/wp-content/themes/custom/scss/utilities/_helpers.scss
+++ b/wp-content/themes/custom/scss/utilities/_helpers.scss
@@ -19,7 +19,7 @@
 .vertical-center{
 	position: relative;
 	top: 50%;
-	@include transform(translateY(-50%));
+	transform: translateY(-50%);
 }
 
 .flex-center{
