--- a/wp-content/themes/custom/scss/utilities/_slick-components.scss
+++ b/wp-content/themes/custom/scss/utilities/_slick-components.scss
@@ -89,7 +89,7 @@
 .slick-dots{
 	position: absolute;
 	left: 50%;
-	@include transform(translate(-50%,0));
+	transform: translate(-50%,0);
 	//bottom: -0px;
 	
 	li{
