--- a/wp-content/themes/custom/scss/site/_news.scss
+++ b/wp-content/themes/custom/scss/site/_news.scss
@@ -18,7 +18,8 @@
 		//margin-right: 1em;
 		display: block;
 		margin-bottom: .5em;
-		@extend .font-bold;
+		@extend .font-medium;
+		color: $brand-tint;
 
 		&.filter-active{
 			@extend .font-black;
