--- a/wp-content/themes/custom/scss/site/_take-action.scss
+++ b/wp-content/themes/custom/scss/site/_take-action.scss
@@ -2,15 +2,15 @@
 //take-action
 .page-id-14{
 	.overview-block-text-inner{
-		background: $pink-tint;
+		background: $brand-secondary;
 	}
 
 	.block-heading{
-		color: $brand;
+		color: white;
 	}
 
 	.block-link{
-		color: $brand;
+		color: white;
 	}
 }
 
