--- a/wp-content/themes/custom/scss/site/_events.scss
+++ b/wp-content/themes/custom/scss/site/_events.scss
@@ -38,17 +38,17 @@
 
 	.events-main{
 		opacity: 1;
-		transition: opacity .2s 1s;
+		transition: opacity .0s .2s;
 	}
 
 	&.filter-loading{
 		.events-main{
-			transition: opacity .2s 1s;
-			opacity: .5;
+			transition: opacity .0s .2s;
+			opacity: .6;
 		}
 
 		.lds-ring{
-			//display: inline-block;
+			display: inline-block !important;
 		}
 	}
 }
@@ -134,6 +134,7 @@ $card-event-spacing: 35px;
 			border-radius: 8px 0px 0px 8px;
 			background-size: cover;
 			background-position: center center;
+			background-color: darken($ultra-light, 4%);
 
 			@media screen and (max-width: $xs) {
 				height: 16vh;
@@ -265,10 +266,10 @@ $card-event-spacing: 35px;
 	box-sizing: border-box;
 	display: block;
 	position: absolute;
-	width: 64px;
-	height: 64px;
-	margin: 8px;
-	border: 8px solid $brand;
+	width: 40px;
+	height: 40px;
+	margin: -20px 20px;
+	border: 5px solid $brand;
 	border-radius: 50%;
 	animation: lds-ring 1.2s cubic-bezier(0.5, 0, 0.5, 1) infinite;
 	border-color: $brand transparent transparent transparent;
